tests/neg-custom-args/captures/consume-in-constructor.check
-- Error: tests/neg-custom-args/captures/consume-in-constructor.scala:20:10 --------------------------------------------
Separation failure: Illegal access to (b : B^), which was passed as a consume parameter to constructor of class A2
and therefore is no longer available.

where:    ^ refers to a fresh root capability in the type of value b
18 |  val a2 = A2(b)
   |              -
   |              The capability was consumed here.
19 |  val _: A2^{cap, b} = a2
20 |  println(b) // error
   |          ^
   |          Then, it was used here

-- Error: tests/neg-custom-args/captures/consume-in-constructor.scala:21:10 --------------------------------------------
Separation failure: Illegal access to (a1 : A1{val b: B^{b²}}^{cap, b²}), which was passed as a consume parameter to constructor of class A2
and therefore is no longer available.

where:    b   is a value in class A1
          b²  is a value in method Test
          cap is a fresh root capability in the type of value a1
18 |  val a2 = A2(b)
   |              -
   |              The capability was consumed here.
19 |  val _: A2^{cap, b} = a2
20 |  println(b) // error
21 |  println(a1) // error, since `b` was consumed before
   |          ^^
   |          Then, it was used here

-- Error: tests/neg-custom-args/captures/consume-in-constructor.scala:27:10 --------------------------------------------
27 |  println(b) // error, b is hidden in the type of a1
   |          ^
   |          Separation failure: Illegal access to {b} which is hidden by the previous definition
   |          of value a1 with type A1^.
   |          This type hides capabilities  {cap, b}
   |
   |          where:    ^   refers to a fresh root capability in the type of value a1
   |                    cap is a fresh root capability created in value a1 when constructing instance A1
